Fixing a small spacing issue

--- a/src/main/resources/static/css/homepage.css
+++ b/src/main/resources/static/css/homepage.css
@@ -1136,6 +1136,7 @@ html, body {
     .signup-header {
         margin-top: 540px;
         font-size: 40px;
+        margin-left: 10px;
     }
 
     .credit-header {
